--- a/food site/css/styles.css
+++ b/food site/css/styles.css
@@ -30,10 +30,12 @@ h1 {
  .store {
   background-color: white;
   width: 300px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 15px;
+  margin-right: 15px;
   margin-bottom: 50px;
   border-radius: 10px;
+
+  float: left;
  }
  
  .store img {
@@ -69,3 +71,10 @@ h1 {
   font-family: Jua;
   text-decoration: none;
  }
+
+ .store-bigbox {
+  width: 660px;
+  margin-left: auto;
+  margin-right: auto;
+ }
+ 
