--- a/628/css/styles.css
+++ b/628/css/styles.css
@@ -13,6 +13,8 @@ body {
 
 #logo {
   float: left;
+  font-family: serif;
+  line-height: 60px;
 }
 
 #menu {
@@ -44,9 +46,15 @@ body {
   height: 670px;
   text-align: center;
   font-family: 'Noto Sans KR', sans-serif;
+
+  line-height: 670px;
 }
 
 .hero-header .info {
+  display: inline-block;
+  vertical-align: auto;
+
+  line-height: normal;
 }
 
 .hero-header .info h1 {
