--- a/grid/css/styles1.css
+++ b/grid/css/styles1.css
@@ -32,6 +32,8 @@ body {
   height: 200px;
 }
 
+/* Tablet */
+
 @media(min-width:767px){
   #div2{
     height: 562px;
@@ -55,6 +57,8 @@ body {
     width: 50%;
   }
 }
+
+/* Desktop */
 
 @media(min-width:991px){
   #div2{
